--- a/src/app/index.html
+++ b/src/app/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <title>Tree.js Demo</title>
+  <title>EZ-Tree</title>
   <style>
     body {
       margin: 0;
