--- a/src/app/index.html
+++ b/src/app/index.html
@@ -45,7 +45,7 @@
         position: relative;
         width: 100%;
         overflow-y: auto;
-        zoom: 1.5;
+        overscroll-behavior: none;
         top: auto;
         right: auto;
       }
