Added additional environmental controls, fixed scroll bar flickering

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -7,17 +7,18 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <title>EZ-Tree</title>
   <style>
+    html,
     body {
       margin: 0;
       background-color: #273940;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
     }
 
     #root {
-      position: absolute;
-      left: 0;
-      right: 0;
-      top: 0;
-      bottom: 0;
+      width: 100%;
+      height: 100%;
     }
 
     #app {
