--- a/src/app/index.html
+++ b/src/app/index.html
@@ -10,7 +10,7 @@
   <link rel="manifest" href="/site.webmanifest">
   <title>EZ-Tree</title>
   <link rel="stylesheet" href="/styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
 </head>
 
 <body>
