Added GA4 and SEO metadata

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -2,15 +2,44 @@
 <html lang="en">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-08XPB68R9M"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-08XPB68R9M');
+  </script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
-  <title>EZ-Tree</title>
+  <title>EZ-Tree | Procedural Tree Generator</title>
+  <meta name="description"
+    content="EZ-Tree is a procedural tree generator that allows you to create realistic 3D tree models with ease.">
+  <!-- SEO Meta Tags -->
+  <meta name="keywords"
+    content="tree generator, 3D trees, procedural generation, 3D modeling, game development, web3D, threejs">
+  <meta name="author" content="Dan Greenheck">
+  <meta property="og:title" content="EZ-Tree | Procedural Tree Generator">
+  <meta property="og:description"
+    content="EZ-Tree is a procedural tree generator that allows you to create realistic 3D tree models with ease.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://eztree.dev">
+  <meta property="og:image" content="https://eztree.dev/og-image.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:creator" content="@dangreenheck">
+  <meta name="twitter:title" content="EZ-Tree | Procedural Tree Generator">
+  <meta name="twitter:description"
+    content="EZ-Tree is a procedural tree generator that allows you to create realistic 3D models of trees with ease.">
+  <meta name="twitter:image" content="https://eztree.dev/og-image.png">
+
   <link rel="stylesheet" href="/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 
 <body>
