--- a/src/app/index.html
+++ b/src/app/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -89,7 +89,7 @@
     Your browser does not support the audio element.
   </audio>
 
-  <script type="module" src="./main.js"></script>
+  <script type="module" src="./main.ts"></script>
   <script>
     function showAbout() {
       document.getElementById('aboutOverlay').classList.add('active');
